fix: remove unuse tabs z-index style, ref #2014.

--- a/components/tabs/style/index.less
+++ b/components/tabs/style/index.less
@@ -112,7 +112,6 @@
     width: 100%;
     height: 100%;
     overflow: visible;
-    z-index: @tabs-pagination-zindex;
 
     &-tab {
       position: relative;
@@ -143,7 +142,6 @@
     &-underline {
       position: absolute;
       border: 1px @tabs-color solid;
-      z-index: 10;
     }
 
     &-animated &-content {
